@@ -1,11 +1,12 @@
 package com.gesco.controllers;
 
+
+import com.gesco.controllers.gestion_principal.DataBase;
 import static org.junit.Assert.assertTrue;
 
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import org.junit.After;
 import org.junit.Before;
@@ -13,29 +14,40 @@ import org.junit.Test;
 
 public class LoginExitosoTest {
 
-    private Path usuariosPath;
-    private byte[] usuariosBackup;
+    private Path dataDirTemporal;
+    private String dataDirAnterior;
 
     @Before
     public void setUp() throws IOException {
-        usuariosPath = Paths.get(System.getProperty("user.dir"))
-            .resolve("src/main/java/com/gesco/models/data/usuarios.txt");
+        dataDirAnterior = DataBase.getDataDir();
+        dataDirTemporal = Files.createTempDirectory("gesco-login-exitoso-");
+        DataBase.setDataDir(dataDirTemporal.toString());
 
-        Files.createDirectories(usuariosPath.getParent());
-        if (Files.exists(usuariosPath)) {
-            usuariosBackup = Files.readAllBytes(usuariosPath);
-        } else {
-            usuariosBackup = new byte[0];
-            Files.createFile(usuariosPath);
-        }
-
-        Files.write(usuariosPath, new byte[0]);
+        Path carpetaSecretaria = dataDirTemporal.resolve("secretaria");
+        Files.createDirectories(carpetaSecretaria);
+        Files.writeString(
+            carpetaSecretaria.resolve("cedulas_ocupaciones.txt"),
+            "12345678:estudiante" + System.lineSeparator(),
+            java.nio.charset.StandardCharsets.UTF_8
+        );
+        Files.writeString(carpetaSecretaria.resolve("12345678.jpg"), "img", java.nio.charset.StandardCharsets.UTF_8);
     }
 
     @After
     public void tearDown() throws IOException {
-        if (usuariosPath != null && usuariosBackup != null) {
-            Files.write(usuariosPath, usuariosBackup);
+        if (dataDirAnterior != null && !dataDirAnterior.isBlank()) {
+            DataBase.setDataDir(dataDirAnterior);
+        }
+
+        if (dataDirTemporal != null && Files.exists(dataDirTemporal)) {
+            Files.walk(dataDirTemporal)
+                .sorted((a, b) -> b.compareTo(a))
+                .forEach(path -> {
+                    try {
+                        Files.deleteIfExists(path);
+                    } catch (IOException ignored) {
+                    }
+                });
         }
     }
 
@@ -46,3 +58,5 @@ public class LoginExitosoTest {
         assertTrue(DataBase.validarInicioSesion("12345678", "password123"));
     }
 }
+
+
