@@ -1,46 +1,93 @@
 package com.gesco.controllers;
 
+
+import com.gesco.controllers.gestion_principal.DataBase;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
 
+import com.gesco.models.usuarios.Usuario.TipoUsuario;
+
 public class RegistroExitosoTest {
 
-    private Path usuariosPath;
-    private byte[] usuariosBackup;
+    private Path dataDirTemporal;
+    private String dataDirAnterior;
 
     @Before
     public void setUp() throws IOException {
-        usuariosPath = Paths.get(System.getProperty("user.dir"))
-            .resolve("src/main/java/com/gesco/models/data/usuarios.txt");
+        dataDirAnterior = DataBase.getDataDir();
+        dataDirTemporal = Files.createTempDirectory("gesco-registro-exitoso-");
+        DataBase.setDataDir(dataDirTemporal.toString());
 
-        Files.createDirectories(usuariosPath.getParent());
-        if (Files.exists(usuariosPath)) {
-            usuariosBackup = Files.readAllBytes(usuariosPath);
-        } else {
-            usuariosBackup = new byte[0];
-            Files.createFile(usuariosPath);
-        }
-
-        Files.write(usuariosPath, new byte[0]);
+        Path carpetaSecretaria = dataDirTemporal.resolve("secretaria");
+        Files.createDirectories(carpetaSecretaria);
+        Files.writeString(
+            carpetaSecretaria.resolve("cedulas_ocupaciones.txt"),
+            "32654321:estudiante" + System.lineSeparator()
+                + "32654322:estudiante" + System.lineSeparator()
+                + "32654323:profesor" + System.lineSeparator()
+                + "32654324:trabajador" + System.lineSeparator(),
+            java.nio.charset.StandardCharsets.UTF_8
+        );
+            Files.writeString(carpetaSecretaria.resolve("32654321.jpg"), "img", java.nio.charset.StandardCharsets.UTF_8);
+            Files.writeString(carpetaSecretaria.resolve("32654322.jpg"), "img", java.nio.charset.StandardCharsets.UTF_8);
+            Files.writeString(carpetaSecretaria.resolve("32654323.jpg"), "img", java.nio.charset.StandardCharsets.UTF_8);
+            Files.writeString(carpetaSecretaria.resolve("32654324.jpg"), "img", java.nio.charset.StandardCharsets.UTF_8);
     }
 
     @After
     public void tearDown() throws IOException {
-        if (usuariosPath != null && usuariosBackup != null) {
-            Files.write(usuariosPath, usuariosBackup);
+        if (dataDirAnterior != null && !dataDirAnterior.isBlank()) {
+            DataBase.setDataDir(dataDirAnterior);
+        }
+
+        if (dataDirTemporal != null && Files.exists(dataDirTemporal)) {
+            Files.walk(dataDirTemporal)
+                .sorted((a, b) -> b.compareTo(a))
+                .forEach(path -> {
+                    try {
+                        Files.deleteIfExists(path);
+                    } catch (IOException ignored) {
+                    }
+                });
         }
     }
 
     @Test
     public void registrarUsuario_datosValidos_devuelveTrue() {
-        assertTrue(DataBase.registrarUsuario("87654321", "clave456", "Ana Garcia", "ana@email.com"));
+        assertTrue(DataBase.registrarUsuario("32654321", "clave456", "Ana Garcia", "ana@email.com"));
+    }
+
+    @Test
+    public void registrarUsuario_estudiante_guardaTipoUsuario() {
+        assertTrue(DataBase.registrarUsuario("32654322", "clave456", "Ana Garcia", "ana@email.com", TipoUsuario.ESTUDIANTE));
+        assertEquals(TipoUsuario.ESTUDIANTE, DataBase.obtenerTipoUsuario("32654322"));
+    }
+
+    @Test
+    public void registrarUsuario_profesor_guardaTipoUsuario() {
+        assertTrue(DataBase.registrarUsuario("32654323", "clave456", "Ana Garcia", "ana@email.com", TipoUsuario.PROFESOR));
+        assertEquals(TipoUsuario.PROFESOR, DataBase.obtenerTipoUsuario("32654323"));
+    }
+
+    @Test
+    public void registrarUsuario_empleado_guardaTipoUsuario() {
+        assertTrue(DataBase.registrarUsuario("32654324", "clave456", "Ana Garcia", "ana@email.com", TipoUsuario.EMPLEADO));
+        assertEquals(TipoUsuario.EMPLEADO, DataBase.obtenerTipoUsuario("32654324"));
+    }
+
+    @Test
+    public void registrarUsuario_nombreConNumeros_devuelveFalse() {
+        assertFalse(DataBase.registrarUsuario("32654324", "clave456", "Ana1 Garcia", "ana@email.com", TipoUsuario.EMPLEADO));
     }
 }
+
+
